Lambda (#1)
* testing git actions with multiple sub directories

* added secret to git actions

* updated secrete to allow pushing to docker

* adding custom webpack

* add custom webpack to add env variable

* dummy domain

* added lambda dependencies and env to git actions

* added runtime hints for graalvm

* fixed api_key undefined error

* testing deploying to ecr

* update aws role

* updated docker tag

* update based on workflow syntax

* hard code location

* updated properties

* migrating to deploying zip file

* trying copying bytecode to dockerfile

* converting to docker image as per docs

* updated Dockerfile to java 17

* deploy to ecr

* updated mainClass in pom

* updated handler

* update based on aws example

* update based on aws example

* update based on aws example

* refatoring based on aws sample example

* deploy to ecr

* deploy to ecr

* refactored dockerfile to add bootstrap

* refactor path to bootstrap in dockerfiler

* trying to fix chmod error

* refactored dockerfile as I was getting permission error

* update

* update dockerfile

* update

* update as permission error

* update as permission error

* update to dockerfile

* testing removing spring cloud dependency and add a requeststreamhandler

* removed UI, updated readme, pom.xml